--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <!--<button onclick="myFunction()">Dark Mode</button>-->
-  <button onclick="roll()">roll a dice</button>
+  <button onclick="roller()">roll a dice</button>
   <p id="dice"style="font: weight 200px;"></p>
   <p>current_position : <span id="current_position" style="display: inline-block;"></span></p>
   <div id ="piece" style="opacity: 1px;"></div>
